--- a/index.html
+++ b/index.html
@@ -1,28 +1,178 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Mark Wong - The Developer with Nothing Wrong</title>
+    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css">
+    <link rel="stylesheet prefetch" href="/stylesheets/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="header-top clearfix">
+        <h1 class="l-left"><a href="#firstSection">Mark Wong</a></h1>
+      </div>
+    </header>
+    <div id="fullpage">
+      <section class="vertical-scrolling firstSection">
+        <h3 id="title1" class="title">YOU & I</h3>
+        <h3 id="title2" class="title">DESIGN & BUILD</h3>
+        <h3 id="title3" class="title">WEBSITES & APPS</h3>
+        <h3 id="paragraph" style="white-space:pre;">
+          Hi, I am Mark from Hong Kong
+          a hobbyist website and app developer
+          currenty as a secondary student residing in UAE
+        </h3>
+      </section>
+      <section class="vertical-scrolling secondSection"><a style="position: relative;font-size: 3.5vmax;padding-left: 5vw;z-index: 2;font-weight:bond;">About me</a>
+        <h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
+          I am a hobbyist developer with passion
+          bringing users the unique experience.
+          I am always seeking for new skills
+          and develop them to prepare myself.
+          I am confident working independently
+          or as a part of a team.
+        </h4>
+        <video id="video" style="position: absolute;top: 0;  min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: -1;" width="100%" height="100%" loop autoplay>
+          <source src="video.mp4" type="video/mp4">
+          <source src="video.ogg" type="video/ogg">Your browser does not support the video tag.
+        </video>
+        <button class="getaquote-button">Get a Quote</button>
+      </section>
+      <section style="display: table" class="vertical-scrolling thirdSection">
+        <div id="myModal" class="modal">
+          <div class="modal-content"><span class="close">x</span>
+            <ul class="slides">
+              <input id="img-1" type="radio" name="radio-btn" checked="">
+              <li class="slide-container">
+                <div class="slide"><img src="images/1.png"></div>
+              </li>
+              <input id="img-2" type="radio" name="radio-btn">
+              <li class="slide-container">
+                <div class="slide"><img src="images/2.png"></div>
+              </li>
+              <input id="img-3" type="radio" name="radio-btn">
+              <li class="slide-container">
+                <div class="slide"><img src="images/3.png"></div>
+              </li>
+              <input id="img-4" type="radio" name="radio-btn">
+              <li class="slide-container">
+                <div class="slide"><img src="images/4.png"></div>
+              </li>
+              <input id="img-5" type="radio" name="radio-btn">
+              <li class="slide-container">
+                <div class="slide"><img src="images/5.png"></div>
+              </li>
+              <input id="img-6" type="radio" name="radio-btn">
+              <li class="slide-container">
+                <div class="slide"><img src="images/6.png"></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="columns">
+          <h3>Working Projects</h3>
+          <ui class="project">
+            <li><a id="keita" style="white-space:pre;line-height:1.5" class="project">
+                App development(iOS & Android)
+                Keita - the catering experts</a></li>
+            <li><a style="white-space:pre;line-height:1.5" class="project">
+                App development(iOS & Android)
+                Keita - the catering experts</a></li>
+          </ui>
+        </div>
+        <div class="columns">
+          <h3>Skills</h3>
+          <ui class="project">
+            <li><a style="white-space:pre;line-height:1.5" class="skill">
+                Confident with:
+                HTML, CSS, Javascript, JSON</a></li>
+            <li><a style="white-space:pre;line-height:1.5" class="skill">
+                Familiar with:
+                PHP, Bash, XML, Node.js</a></li>
+          </ui>
+        </div>
+      </section>
+      <section class="vertical-scrolling">
+        <h2>fullPage.js</h2>
+        <h3>This is the fourth section</h3>
+      </section>
+      <section class="vertical-scrolling">
+        <h2>fullPage.js</h2>
+        <h3>This is the fifth section and it contains the first slide (actually section == first slide)</h3>
+      </section>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
+    <script>
+      var modal = document.getElementById('myModal');
+      var slider = document.getElementById('jssor_1');
+      // Get the <span> element that closes the modal
+      var span = document.getElementsByClassName("close")[0];
+      // When the user clicks on the button, open the modal
+      keita.onclick = function() {
+          modal.style.display = "block";
+          $(".fp-slidesNav").show();
+      }
+      // When the user clicks on <span> (x), close the modal
+      span.onclick = function() {
+          modal.style.display = "none";
+          $(".fp-slidesNav").hide();
+      }
+      // When the user clicks anywhere outside of the modal, close it
+      window.onclick = function(event) {
+          if (event.target == modal) {
+              modal.style.display = "none";
+              $(".fp-slidesNav").hide();
+          }
+      }
+      // variables
+      var $header_top = $('.header-top');
+      var $nav = $('nav');
+      $( document ).ready(function() {
+        $(".fp-slidesNav").hide();
+      });
+      // toggle menu
+      // fullpage customization
+      $('#fullpage').fullpage({
+        sectionsColor: ['#B8AE9C', '#348899', '#F2AE72', '#5C832F', '#B8B89F'],
+        sectionSelector: '.vertical-scrolling',
+        navigation: true,
+        slidesNavigation: true,
+        controlArrows: false,
+        anchors: ['firstSection', 'secondSection', 'thirdSection', 'fourthSection', 'fifthSection'],
+        menu: '#menu',
+        afterLoad: function(anchorLink, index) {
+          $('#video').show();
+          $header_top.css('background', 'rgba(0, 47, 77, .3)');
+          $nav.css('background', 'rgba(0, 47, 77, .25)');
+        },
+        onLeave: function(index, nextIndex, direction) {
+          if (index == 4)
+          {$('#video').hide();}
+        },
+        afterSlideLoad: function( anchorLink, index, slideAnchor, slideIndex) {
+          if(anchorLink == 'fifthSection' && slideIndex == 1) {
+            $.fn.fullpage.setAllowScrolling(false, 'up');
+            $header_top.css('background', 'transparent');
+            $(this).css('background', '#374140');
+            $(this).find('h2').css('color', 'white');
+            $(this).find('h3').css('color', 'white');
+            $(this).find('p').css(
+              {
+                'color': '#DC3522',
+                'opacity': 1,
+                'transform': 'translateY(0)'
+              }
+            );
+          }
+        },
+        onSlideLeave: function( anchorLink, index, slideIndex, direction) {
+          if(anchorLink == 'fifthSection' && slideIndex == 1) {
+            $.fn.fullpage.setAllowScrolling(true, 'up');
+            $header_top.css('background', 'rgba(0, 47, 77, .3)');
+          }
+        }
+      });
+    </script>
+  </body>
 </html>
