--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
         <div class="columns">
           <h3>Working Projects</h3>
           <ui class="project">
-            <li><a id="keita" style="white-space:pre;line-height:1.5" class="project">
-                App development(iOS & Android)
                 Keita - the catering experts</a></li>
+            <li>
+              <a id="keita" style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
+Keita - the catering experts</a>
+            </li>
             <li><a style="white-space:pre;line-height:1.5" class="project">
                 App development(iOS & Android)
                 Keita - the catering experts</a></li>
