--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
               <a id="keita" style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
 Keita - the catering experts</a>
             </li>
-            <li><a style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
-Keita - the catering experts</a></li>
+            <li>
+              <a style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
+Keita - the catering experts</a>
+            </li>
           </ui>
         </div>
         <div class="columns">
