--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@ Keita - the catering experts</a>
         <div class="columns">
           <h3>Skills</h3>
           <ui class="project">
-            <li><a style="white-space:pre;line-height:1.5" class="skill">
-                Confident with:
-                HTML, CSS, Javascript, JSON</a></li>
-            <li><a style="white-space:pre;line-height:1.5" class="skill">
-                Familiar with:
-                PHP, Bash, XML, Node.js</a></li>
+            <li>
+              <a style="white-space:pre;line-height:1.5" class="skill">Confident with:
+                HTML, CSS, Javascript, JSON</a>
+            </li>
+            <li>
+              <a style="white-space:pre;line-height:1.5" class="skill">Familiar with:
+                PHP, Bash, XML, Node.js</a>
+            </li>
           </ui>
         </div>
       </section>
