--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Mark Wong - The Developer with Nothing Wrong</title>
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.css">
     <link rel="stylesheet prefetch" href="/stylesheets/style.css">
+    <link rel="stylesheet prefetch" href="/stylesheets/semantic.min.css">
+    <link rel="stylesheet" href="https://npmcdn.com/flickity@1.2/dist/flickity.min.css">
   </head>
   <body>
     <header>
@@ -38,62 +40,32 @@
         </video>
         <button class="getaquote-button">Get a Quote</button>
       </section>
-      <section style="display: table" class="vertical-scrolling thirdSection">
-        <div id="myModal" class="modal">
-          <div class="modal-content"><span class="close">x</span>
-            <ul class="slides">
-              <input id="img-1" type="radio" name="radio-btn" checked="">
-              <li class="slide-container">
-                <div class="slide"><img src="images/1.png"></div>
-              </li>
-              <input id="img-2" type="radio" name="radio-btn">
-              <li class="slide-container">
-                <div class="slide"><img src="images/2.png"></div>
-              </li>
-              <input id="img-3" type="radio" name="radio-btn">
-              <li class="slide-container">
-                <div class="slide"><img src="images/3.png"></div>
-              </li>
-              <input id="img-4" type="radio" name="radio-btn">
-              <li class="slide-container">
-                <div class="slide"><img src="images/4.png"></div>
-              </li>
-              <input id="img-5" type="radio" name="radio-btn">
-              <li class="slide-container">
-                <div class="slide"><img src="images/5.png"></div>
-              </li>
-              <input id="img-6" type="radio" name="radio-btn">
-              <li class="slide-container">
-                <div class="slide"><img src="images/6.png"></div>
-              </li>
-            </ul>
+      <section class="vertical-scrolling thirdSection">
+        <div style="width:50vw" class="ui basic modal">
+          <div style="height:85vh;margin: auto;" class="carousel js-flickity ui one column centered grid">
+            <div class="carousel-cell"><img src="images/1.png"></div>
+            <div class="carousel-cell"><img src="images/2.png"></div>
+            <div class="carousel-cell"><img src="images/3.png"></div>
           </div>
         </div>
-        <div class="columns">
-          <h3>Working Projects</h3>
-          <ui class="project">
-            <li>
-              <a id="keita" style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
-Keita - the catering experts</a>
-            </li>
-            <li>
-              <a style="white-space:pre;line-height:1.5" class="project">App development(iOS &amp; Android)
-Keita - the catering experts</a>
-            </li>
-          </ui>
-        </div>
-        <div class="columns">
-          <h3>Skills</h3>
-          <ui class="project">
-            <li>
-              <a style="white-space:pre;line-height:1.5" class="skill">Confident with:
-HTML, CSS, Javascript, JSON</a>
-            </li>
-            <li>
-              <a style="white-space:pre;line-height:1.5" class="skill">Familiar with:
-PHP, Bash, XML, Node.js</a>
-            </li>
-          </ui>
+        <div style="min-height:100%" class="ui two column center aligned very relaxed stackable grid center aligned">
+          <div class="middle aligned column">
+            <div>
+              <h3 class="projects">Working Projects</h3><a style="white-space:pre;line-height:1.5" class="project">
+                App development(iOS & Android)
+                Keita - the catering experts</a>
+            </div>
+            <div></div>
+            <button id="keita" class="getaquote-button">View recent work</button>
+          </div>
+          <div class="ui vertical divider"><a>AND</a></div>
+          <div class="middle aligned column">
+            <h3 class="skills">Skills</h3><a style="white-space:pre;line-height:1.5" class="skill">
+              Confident with:
+              HTML, CSS, Javascript, JSON
+              Familiar with:
+              PHP, Bash, XML, Node.js</a>
+          </div>
         </div>
       </section>
       <section class="vertical-scrolling">
@@ -106,34 +78,17 @@ PHP, Bash, XML, Node.js</a>
       </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="/semantic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.6.6/jquery.fullPage.min.js"></script>
+    <script src="https://npmcdn.com/flickity@1.2/dist/flickity.pkgd.min.js"></script>
     <script>
-      var modal = document.getElementById('myModal');
-      var slider = document.getElementById('jssor_1');
-      // Get the <span> element that closes the modal
-      var span = document.getElementsByClassName("close")[0];
-      // When the user clicks on the button, open the modal
       keita.onclick = function() {
-          modal.style.display = "block";
-          $(".fp-slidesNav").show();
+        $('.flickity-page-dots').addClass("centered row");
+        $('.ui.modal').modal('show');
       }
-      // When the user clicks on <span> (x), close the modal
-      span.onclick = function() {
-          modal.style.display = "none";
-          $(".fp-slidesNav").hide();
-      }
-      // When the user clicks anywhere outside of the modal, close it
-      window.onclick = function(event) {
-          if (event.target == modal) {
-              modal.style.display = "none";
-              $(".fp-slidesNav").hide();
-          }
-      }
-      // variables
       var $header_top = $('.header-top');
       var $nav = $('nav');
-      $( document ).ready(function() {
-        $(".fp-slidesNav").hide();
+      $(document).ready(function () {
       });
       // toggle menu
       // fullpage customization
