--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <div style="min-height:100%" class="ui two column center aligned very relaxed stackable grid center aligned">
           <div class="middle aligned column">
             <div>
-              <h3 class="projects">Working Projects</h3><a style="white-space:pre;line-height:1.5" class="project">
+              <h3 class="projects">Working Projects</h3>
+              <a style="white-space:pre;line-height:1.5" class="project">
                 App development(iOS & Android)
                 Keita - the catering experts</a>
             </div>
