--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <div class="middle aligned column">
             <div>
               <h3 class="projects">Working Projects</h3>
-              <a style="white-space:pre;line-height:1.5" class="project">
-App development(iOS & Android)
+<a style="white-space:pre;line-height:1.5" class="project">
+App development(iOS &amp; Android)
 Keita - the catering experts</a>
             </div>
             <div></div>
