--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
         </h3>
       </section>
       <section class="vertical-scrolling secondSection"><a style="position: relative;font-size: 3.5vmax;padding-left: 5vw;z-index: 2;font-weight:bond;">About me</a>
-        <h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
-          I am a hobbyist developer with passion
-          bringing users the unique experience.
-          I am always seeking for new skills
-          and develop them to prepare myself.
-          I am confident working independently
-          or as a part of a team.
-        </h4>
+<h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
+I am a hobbyist developer with passion
+bringing users the unique experience.
+I am always seeking for new skills
+and develop them to prepare myself.
+I am confident working independently
+or as a part of a team.</h4>
         <video id="video" style="position: absolute;top: 0;  min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: -1;" width="100%" height="100%" loop autoplay>
           <source src="video.mp4" type="video/mp4">
           <source src="video.ogg" type="video/ogg">Your browser does not support the video tag.
