--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ or as a part of a team.</h4>
 App development(iOS &amp; Android)
 Keita - the catering experts</a>
             </div>
-            <div></div>
-            <button id="keita" class="getaquote-button">View recent work</button>
+            <div>
+              <button id="keita" class="getaquote-button">View recent work</button>
+            </div>
           </div>
           <div class="ui vertical divider"><a>AND</a></div>
           <div class="middle aligned column">
