--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ or as a part of a team.</h4>
 <a style="white-space:pre;line-height:1.5" class="project">
 App development(iOS &amp; Android)
 Keita - the catering experts</a>
-              <button id="keita" class="getaquote-button">View recent work</button>
+              <button id="keita">View recent work</button>
             </div>
           </div>
           <div class="ui vertical divider"><a>AND</a></div>
