--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ or as a part of a team.</h4>
 <a style="white-space:pre;line-height:1.5" class="project">
 App development(iOS &amp; Android)
 Keita - the catering experts</a>
-              <button id="keita">View recent work</button>
+              <div><button id="keita" class="getaquote-button" style="width:14vw !important;float:none !important;margin-left:0 !important;">View recent work</button></div>
             </div>
           </div>
           <div class="ui vertical divider"><a>AND</a></div>
@@ -66,14 +66,6 @@ Familiar with:
 PHP, Bash, XML, Node.js</a>
           </div>
         </div>
-      </section>
-      <section class="vertical-scrolling">
-        <h2>fullPage.js</h2>
-        <h3>This is the fourth section</h3>
-      </section>
-      <section class="vertical-scrolling">
-        <h2>fullPage.js</h2>
-        <h3>This is the fifth section and it contains the first slide (actually section == first slide)</h3>
       </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
