--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ or as a part of a team.</h4>
             <div class="carousel-cell"><img src="images/1.png"></div>
             <div class="carousel-cell"><img src="images/2.png"></div>
             <div class="carousel-cell"><img src="images/3.png"></div>
+            <div class="carousel-cell"><img src="images/4.png"></div>
+            <div class="carousel-cell"><img src="images/5.png"></div>
+            <div class="carousel-cell"><img src="images/6.png"></div>
           </div>
         </div>
         <div style="min-height:100%" class="ui two column center aligned very relaxed stackable grid center aligned">
@@ -61,7 +64,7 @@ Keita - the catering experts</a>
           <div class="middle aligned column">
             <h3 class="skills">Skills</h3><a style="white-space:pre;line-height:1.5" class="skill">
 Confident with:
-HTML, CSS, Javascript, JSON
+HTML, CSS, Javascript, REST
 Familiar with:
 PHP, Bash, XML, Node.js</a>
           </div>
