--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ or as a part of a team.</h4>
       <section class="vertical-scrolling thirdSection">
         <div style="width:50vw" class="ui basic modal">
           <div style="height:85vh;margin: auto;" class="carousel js-flickity ui one column centered grid">
-            <div class="carousel-cell"><img src="images/1.png"></div>
-            <div class="carousel-cell"><img src="images/2.png"></div>
-            <div class="carousel-cell"><img src="images/3.png"></div>
-            <div class="carousel-cell"><img src="images/4.png"></div>
-            <div class="carousel-cell"><img src="images/5.png"></div>
-            <div class="carousel-cell"><img src="images/6.png"></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/1.png"></a></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/2.png"></a></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/3.png"></a></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/4.png"></a></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/5.png"></a></div>
+            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/6.png"></a></div>
           </div>
         </div>
         <div style="min-height:100%" class="ui two column center aligned very relaxed stackable grid center aligned">
