--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
         </h3>
       </section>
       <section class="vertical-scrolling secondSection"><a style="position: relative;font-size: 3.5vmax;padding-left: 5vw;z-index: 2;font-weight:bond;">About me</a>
+        <div class="ui basic modal">
+          <div id="form-main">
+            <div id="form-div">
+            <form class="form" id="form1">
+            <p class="name">
+            <input name="name" type="text" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" placeholder="Name" id="name" />
+            </p>
+            <p class="email">
+            <input name="email" type="text" class="validate[required,custom[email]] feedback-input" id="email" placeholder="Email" />
+            </p>
+            <p class="text">
+            <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
+            </p>
+            <div class="submit">
+            <input type="submit" value="SEND" id="button-blue"/>
+            <div class="ease"></div>
+            </div>
+            </form>
+            </div>
 <h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
 I am a hobbyist developer with passion
 bringing users the unique experience.
@@ -40,14 +59,14 @@ or as a part of a team.</h4>
         <button class="getaquote-button">Get a Quote</button>
       </section>
       <section class="vertical-scrolling thirdSection">
-        <div style="width:50vw" class="ui basic modal">
+        <div style="width:50vw" class="ui basic modal" id="carousel">
           <div style="height:85vh;margin: auto;" class="carousel js-flickity ui one column centered grid">
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/1.png"></a></div>
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/2.png"></a></div>
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/3.png"></a></div>
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/4.png"></a></div>
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/5.png"></a></div>
-            <div class="carousel-cell"><a href="https://markmcwong.github.io/Sample.apk" target="_blank"><img src="images/6.png"></a></div>
+            <div class="carousel-cell"><img src="images/1.png"></div>
+            <div class="carousel-cell"><img src="images/2.png">/div>
+            <div class="carousel-cell"><img src="images/3.png"></div>
+            <div class="carousel-cell"><img src="images/4.png"></div>
+            <div class="carousel-cell"><img src="images/5.png"></div>
+            <div class="carousel-cell"><img src="images/6.png"></div>
           </div>
         </div>
         <div style="min-height:100%" class="ui two column center aligned very relaxed stackable grid center aligned">
@@ -78,7 +97,7 @@ PHP, Bash, XML, Node.js</a>
     <script>
       keita.onclick = function() {
         $('.flickity-page-dots').addClass("centered row");
-        $('.ui.modal').modal('show');
+        $('#carousel').modal('show');
       }
       var $header_top = $('.header-top');
       var $nav = $('nav');
