--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                   <input type="submit" value="SEND" id="button-blue"/>
                 <div class="ease"></div>
                 </div>
-            </form>
+              </form>
+            </div>      
           </div>
         </div>
 <h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
