--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
       <section class="vertical-scrolling secondSection"><a style="position: relative;font-size: 3.5vmax;padding-left: 5vw;z-index: 2;font-weight:bond;">About me</a>
         <div class="ui basic modal" id="form">
-          <div id="form-main">
+          <div id="form-main" style="display: block;margin: auto;">
             <div id="form-div">
               <form class="form" id="form1">
                 <p class="name">
@@ -39,7 +39,7 @@
                 <p class="text">
                   <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
                 </p>
-                <div class="submit">
+                <div class="submit ui approve button">
                   <input type="submit" value="SEND" id="button-blue"/>
                 <div class="ease"></div>
                 </div>
