--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="text">
                   <textarea name="text" class="validate[required,length[6,300]] feedback-input" id="comment" placeholder="Comment"></textarea>
                 </p>
-                <div class="submit ui approve button">
+                <div class="ui submit approve button">
                   <input type="submit" value="SEND" id="button-blue"/>
                 <div class="ease"></div>
                 </div>
