--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ PHP, Bash, XML, Node.js</a>
         <div style="width:50vw" class="ui basic modal" id="carousel">
           <div style="height:85vh;margin: auto;" class="carousel js-flickity ui one column centered grid">
             <div class="carousel-cell"><img src="images/1.png"></div>
-            <div class="carousel-cell"><img src="images/2.png">/div>
+            <div class="carousel-cell"><img src="images/2.png"></div>
             <div class="carousel-cell"><img src="images/3.png"></div>
             <div class="carousel-cell"><img src="images/4.png"></div>
             <div class="carousel-cell"><img src="images/5.png"></div>
