--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 <h4 style="white-space:pre;z-index: 2;position:relative;padding-left: 5vw;font-size:1.5em;margin-top:25px">
 I am a hobbyist developer with passion
 bringing users the unique experience.
+
 I am always seeking for new skills
 and develop them to prepare myself.
+
 I am confident working independently
 or as a part of a team.</h4>
         <video id="video" style="position: absolute;top: 0;  min-width: 100%;min-height: 100%;width: auto;height: auto;z-index: -1;" width="100%" height="100%" loop autoplay>
@@ -107,6 +109,7 @@ PHP, Bash, XML, Node.js</a>
       var $header_top = $('.header-top');
       var $nav = $('nav');
       $(document).ready(function () {
+        $( "<p style='font-size:25px' href='Sample.apk' target='_blank'>Test</p>" ).prependTo( ".flickity-viewport" );
       });
       // toggle menu
       // fullpage customization
