--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ PHP, Bash, XML, Node.js</a>
           "to" : "textData2",
           "text" : "test"
       };
-      $('.button-blue').click(function(){
+      $('#button-blue').click(function(){
         $.ajax({
           type: 'POST',
           dataType: 'json',
