--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ PHP, Bash, XML, Node.js</a>
       var settings = {
         "async": true,
         "crossDomain": true,
-        "url": "https://api.mailgun.net/v3/sandbox37136330f7464a59b1c956fbdd970585.mailgun.org/messages",
+        "url": "https://thingproxy.freeboard.io/fetch/https://api.mailgun.net/v3/sandbox37136330f7464a59b1c956fbdd970585.mailgun.org/messages",
         "method": "POST",
         "headers": {
           "authorization": "Basic YXBpOmtleS00NjcxM2IxZTYyYWMzODk3YjI2MWU5ZWE2Njc5NmZiZQ==",
