--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ PHP, Bash, XML, Node.js</a>
     });
       keita.onclick = function() {
         if ($( "a" ).hasClass( "dynamic" ) == false){
-        $( "<a class='dynamic' style='font-size:25px' href='https://markmcwong.github.io/Sample.apk' target='_blank'>Click here to Download the Sample</a>" ).prependTo( ".flickity-viewport" );
+        $( "<a class='dynamic' style='font-size:25px' href='https://markmcwong.github.io/iCafe.apk' target='_blank'>Click here to Download the Sample</a>" ).prependTo( ".flickity-viewport" );
         }
         $('.flickity-page-dots').addClass("centered row");
         $('#carousel').modal('show');
